on-chain anf off-chain code for Merkle Trees